# minigame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  vcpkg.json
assets/: atlas.qoi
include/: base.h  mAlloc.h  mInput.h  mProfiler.h  mRend.h  mSound.h  mTex.h  mTime.h  mWin.h  mqoi.h  mui.h
include/minigame/: mInput.h  mTex.h  mTime.h  mui.h
src/: CMakeLists.txt  SDL_backend.c  mAlloc.c  mProfiler.c  main.c  mg.c
